; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lzma/C/Util/SfxSetup/extr_SfxSetup.c_MyCreateDir.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lzma/C/Util/SfxSetup/extr_SfxSetup.c_MyCreateDir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @MyCreateDir to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @MyCreateDir(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = call i64 @CreateDirectoryW(i32* %3, i32* null)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  br label %9

7:                                                ; preds = %1
  %8 = call i32 (...) @GetLastError()
  br label %9

9:                                                ; preds = %7, %6
  %10 = phi i32 [ 0, %6 ], [ %8, %7 ]
  ret i32 %10
}

declare dso_local i64 @CreateDirectoryW(i32*, i32*) #1

declare dso_local i32 @GetLastError(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
